Stopgap skill styling update

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -160,7 +160,7 @@
   }
 
   .skill-proficiency.skilled span {
-    width: 70%;
+    width: 80%;
   }
 
   .skill-proficiency.advanced span {
